# advent_of_code_2022

./: Makefile  README.md  pyproject.toml  setup.cfg
day01/: compute.py  test_compute.py
day02/: compute.py  test_compute.py
day03/: compute.py  test_compute.py
day04/: compute.py  test_compute.py
day05/: compute.py  test_compute.py
day06/: compute.py  test_compute.py
day07/: compute.py  test_compute.py
day08/: compute.py  test_compute.py
day09/: compute.py  test_compute.py
day10/: compute.py  test_compute.py
day12/: compute.py  test_compute.py
