[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = "Answers for https://adventofcode.com/2022/"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 2
